--- a/AlamClock/AlamClock/AlarmClock.csproj
+++ b/AlamClock/AlamClock/AlarmClock.csproj
@@ -135,5 +135,11 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\yourbody.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\lalala.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
