Snooze and Limit added

--- a/AlamClock/AlamClock/AlarmClock.csproj
+++ b/AlamClock/AlamClock/AlarmClock.csproj
@@ -75,6 +75,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SnoozeIt.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SnoozeIt.Designer.cs">
+      <DependentUpon>SnoozeIt.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -91,6 +97,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SnoozeIt.resx">
+      <DependentUpon>SnoozeIt.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
