--- a/AlamClock/AlamClock/AlarmClock.csproj
+++ b/AlamClock/AlamClock/AlarmClock.csproj
@@ -61,6 +61,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Alarm.cs" />
+    <Compile Include="ChangeAlarm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ChangeAlarm.Designer.cs">
+      <DependentUpon>ChangeAlarm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,9 @@
     <Compile Include="SnoozeIt.Designer.cs">
       <DependentUpon>SnoozeIt.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ChangeAlarm.resx">
+      <DependentUpon>ChangeAlarm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -143,9 +152,6 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\yourbody.mp3" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\lalala.wav" />
