--- a/AlamClock/AlamClock/AlarmClock.csproj
+++ b/AlamClock/AlamClock/AlarmClock.csproj
@@ -81,6 +81,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shuffle.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Shuffle.Designer.cs">
+      <DependentUpon>Shuffle.cs</DependentUpon>
+    </Compile>
     <Compile Include="SnoozeIt.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,6 +112,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Shuffle.resx">
+      <DependentUpon>Shuffle.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SnoozeIt.resx">
       <DependentUpon>SnoozeIt.cs</DependentUpon>
     </EmbeddedResource>
