Changes: - Functionality : Game for word guess finished, Number guess game changed - Design : Fonts, Backgrounds in sync in all forms

--- a/AlamClock/AlamClock/AlarmClock.csproj
+++ b/AlamClock/AlamClock/AlarmClock.csproj
@@ -237,5 +237,11 @@
   <ItemGroup>
     <None Include="Resources\The Damned - Neat Neat Neat  New Rose %28Peel session 301176%29.wav" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\backgroundForm101.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\alarmLogo.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
