Changes: - in the Quiz Game a new sub game for answering a question was added

--- a/AlamClock/AlamClock/AlarmClock.csproj
+++ b/AlamClock/AlamClock/AlarmClock.csproj
@@ -61,6 +61,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Alarm.cs" />
+    <Compile Include="AnswerQuestion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AnswerQuestion.Designer.cs">
+      <DependentUpon>AnswerQuestion.cs</DependentUpon>
+    </Compile>
     <Compile Include="ChangeAlarm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,6 +135,9 @@
     <Compile Include="SolveEquation.Designer.cs">
       <DependentUpon>SolveEquation.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AnswerQuestion.resx">
+      <DependentUpon>AnswerQuestion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ChangeAlarm.resx">
       <DependentUpon>ChangeAlarm.cs</DependentUpon>
     </EmbeddedResource>
